<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/Cardview_1"
           app:cardElevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="16dp">

                <EditText
                    android:id="@+id/EnterSearchKeyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/search"
                    android:inputType="textFilter"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/ButtonMenu"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_menu"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/ButtonMenu"
                        android:text="@string/app_name"
                        android:textColor="@color/Black"
                        android:textSize="18sp"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:elevation="1dp"
            android:id="@+id/layout_1"
            android:layout_above="@id/LllAddNotes"
            android:background="@color/Grey100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Cardview_1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerViewNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/ImageNotebook"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/notebook" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LllAddNotes"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/AddNotes"
                android:layout_weight="10"
                android:layout_marginEnd="20dp"
                android:layout_width="0dp"
                android:drawableEnd="@drawable/take_note"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/notes"
                android:paddingStart="20dp"
                android:gravity="start|center_vertical"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textStyle="normal"
                tools:ignore="InefficientWeight,RtlSymmetry" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/navigation_view_item"
        app:itemTextColor="@color/navigation_view_item">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>